Fixed vendor prefixes for flex on ios

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -221,12 +221,17 @@ button.clicked > span.bar:last-child{
 
  nav{
     display: none;
-        -webkit-flex-direction: column;
+
+    -webkit-flex-direction: column;
     flex-direction:column;
 
     -webkit-align-items:center;
     align-items: center;
+
+
+    -webkit-justify-content:center;
     justify-content:center;
+
 
     position:fixed; 
     top:0;
@@ -240,12 +245,15 @@ button.clicked > span.bar:last-child{
     background-color:#212121;
     opacity: 0;
 
-    transition: all 0.1s ease-in;
     -webkit-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+
  }
  nav.active{
-
+    display: -webkit-flex;
     display: flex;
+
+
      opacity: 0.975;
  }
  nav > ol {
@@ -277,7 +285,9 @@ button.clicked > span.bar:last-child{
 
 /**/
 .center{
+    -webkit-flex: 1 0 auto;
     flex: 1 0 auto;
+
 }
 .title-section{
     position: relative;
@@ -290,13 +300,15 @@ button.clicked > span.bar:last-child{
     background-color: #212121;
     color:#fff;
 
-    display: -ms-flex;
     display: -webkit-flex;
     display: flex;
 
+
     -webkit-flex-direction:row;
     flex-direction:row;
-        -webkit-align-items:start;
+
+
+    -webkit-align-items:start;
     align-items:start;
 
 }
@@ -328,17 +340,23 @@ button.clicked > span.bar:last-child{
     height: 100vh;
     width:100vw;
 
-    display: -ms-flex;
     display: -webkit-flex;
     display: flex;
 
-    -webkit-flex-direction: column;
+
+
     flex-direction:column;
+    -webkit-flex-direction: column;
 
     -webkit-align-items:center;
     align-items:center;
+
+    -webkit-align-content:center;
     align-content:center;
+
+    -webkit-justify-content:center;
     justify-content:center;
+
 
     /*Gradient
     background: -webkit-linear-gradient(bottom, rgba(13,13,13,0.9), rgba(13,13,13,0.99)); 
@@ -435,12 +453,12 @@ a.btn:active{
   animation: shadow .75s 1; 
 }
 .left{
-        -webkit-align-self:flex-start;
+    -webkit-align-self:flex-start;
     align-self: flex-start;
     float:left;
 }
 .left{
-            -webkit-align-self:flex-end;
+    -webkit-align-self:flex-end;
     align-self: flex-end;
     float:right;
 }
@@ -460,7 +478,6 @@ a.btn:active{
     -webkit-font-smoothing: antialiased;
 }
 i{
-        display: -ms-flex;
     display: -webkit-flex;
     display: flex;
 
@@ -495,7 +512,7 @@ footer a:hover{
 }
 .footer-text{
 
-    color:#b1b1b1;
+    color:#b1b1b1 !important;
     padding: 0; 
     margin: 0; 
     font-size: 1rem;
@@ -515,10 +532,12 @@ footer a:hover{
 .row{
     display: -webkit-flex;
     display:flex;
+
     -webkit-flex-direction: row;
     flex-direction: row;
 }
 .space-between{
+    -webkit-justify-content: space-between;
     justify-content: space-between;
 }
 
@@ -528,7 +547,6 @@ footer a:hover{
 }
 
 .col{
-        display: -ms-flex;
     display: -webkit-flex;
     display: flex;
 
@@ -537,20 +555,23 @@ footer a:hover{
 }
 
 .lg-50{
+    -webkit-flex: 1 0 50%;
     flex: 1 0 50%;
 }
 /* Portrait and Landscape */
 @media only screen and (min-device-width: 250px) and (max-device-width: 480px) {
+     .hide-sm{
+        display: none;
+     }
      .container{
         padding: 0 13vw;
     }
     .sm-100{
-        -webkit-flex: 1 0 100% !important;          /* Chrome */
-          -ms-flex: 1 0 100% !important; 
+        -webkit-flex: 1 0 100% !important;   
         flex: 1 0 100% !important;
     }
     .sm-start{
-            -webkit-align-items: flex-start !important;
+        -webkit-align-items: flex-start !important;
         align-items: flex-start !important;
     }
     .chapter-section-header{
@@ -566,8 +587,9 @@ footer a:hover{
         color: #222;
     }
     .title-section{
-            -webkit-align-items: center;
+        -webkit-align-items: center;
         align-items:center;
+        -webkit-justify-content:center;
         justify-content:center;
     }
 }
@@ -578,8 +600,7 @@ footer a:hover{
         padding: 0 15vw;
     }
     .lg-50{
-          -webkit-flex: 1 1 0 50% !important;          /* Chrome */
-  -ms-flex: 1 1 0 50% !important; 
+        -webkit-flex: 1 1 0 50% !important; 
         flex: 1 0 50% !important;
     }
     .chapter-content > p:first-of-type:first-letter{
@@ -592,8 +613,9 @@ footer a:hover{
         color: #222;
     }
     .title-section{
-            -webkit-align-items:center;
+        -webkit-align-items:center;
         align-items:center;
+        -webkit-justify-content:center;
         justify-content:center;
     }
 }
